--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 jupyter = "^1.0.0"
+transformers = "^4.42.3"
+torch = "^2.3.1"
 
 
 [build-system]
